--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
         </div>
 
         <div class="movies-grid"></div>
+        <div class="pagination">
+          <div class="page" id="prev">Previous Page</div>
+          <div class="current" id="current">1</div>
+          <div class="page" id="next">Next Page</div>
+        </div>
       </div>
     </div>
 
